# shifting-codes-python-port

./: .gitignore  .gitmodules  CLAUDE.md  NANOBIND_ISSUES.md  README.md  pyproject.toml
.claude/skills/write-article/: SKILL.md
.github/workflows/: ci.yml
articles/: pluto-llvm-obfuscation.md
src/shifting_codes/: __init__.py
src/shifting_codes/passes/: __init__.py  alias_access.py  anti_disassembly.py  base.py  bogus_control_flow.py  bogus_control_flow_pluto.py  custom_cc.py  flattening.py  flattening_pluto.py  global_encryption.py  global_encryption_pluto.py  indirect_branch.py  indirect_call.py  indirect_call_pluto.py  mba_obfuscation.py  merge_function.py  string_encryption.py  substitution.py  virtualization.py
src/shifting_codes/riscybusiness_vm/: __init__.py  compiler.py  interpreter.py  isa.py
src/shifting_codes/samples/: __init__.py  serial_checker.c
src/shifting_codes/ui/: app.py  compiler.py  diff_view.py  export_dialog.py  theme.py  (+8 more)
tests/: conftest.py  test_alias_access.py  test_anti_disassembly.py  test_bogus_control_flow.py  test_bogus_control_flow_pluto.py  test_custom_cc.py  test_flattening.py  test_flattening_pluto.py  test_global_encryption.py  test_global_encryption_pluto.py  test_indirect_branch.py  test_indirect_call.py  test_indirect_call_pluto.py  test_mba_obfuscation.py  test_merge_function.py  test_pipeline.py  test_selective_pipeline.py  test_serial_checker_vm.py  test_source_parser.py  test_string_encryption.py  test_substitution.py  test_virtualization.py  test_virtualization_after_obfuscation.py  test_vm_execution.py  test_xtea.py
(+5 files in other folders)
