[project]
name = "shifting-codes"
version = "0.1.0"
description = "LLVM obfuscation passes ported from Pluto to Python, with PyQt6 visualization"
requires-python = ">=3.12"
dependencies = [
    "z3-solver>=4.12",
    "PyQt6>=6.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shifting_codes"]

[tool.uv.sources]
llvm-nanobind = { path = "../llvm-nanobind", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../llvm-nanobind/build"]
